examples/errors/type_errors.stlc
main : Int
main = if 1 < 2 then 1 else true
